Added notification marking and availability
